// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypegenOutput action-missing 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "notImplementedYet" | "anotherNotImplementedYet";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    someAction: "xstate.init";
    otherAction: "xstate.init";
    notImplementedYet: "xstate.init";
    anotherNotImplementedYet: "xstate.init";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: undefined;
  tags: never;
}
"
`;

exports[`getTypegenOutput action-provided-function 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: never;
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    someAction: "xstate.init";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: undefined;
  tags: never;
}
"
`;

exports[`getTypegenOutput after-numeric-like-delay 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.after(500)#(machine)": { type: "xstate.after(500)#(machine)" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "sayHello";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    sayHello: "xstate.after(500)#(machine)";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: undefined;
  tags: never;
}
"
`;

exports[`getTypegenOutput after-string-delay 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.after(myDelay)#(machine).b": {
      type: "xstate.after(myDelay)#(machine).b";
    };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "someAction";
    services: never;
    guards: never;
    delays: "myDelay";
  };
  eventsCausingActions: {
    someAction: "xstate.after(myDelay)#(machine).b";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {
    myDelay: "NEXT";
  };
  matchesStates: "a" | "b" | "c";
  tags: never;
}
"
`;

exports[`getTypegenOutput choose-defined-in-implementations 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: never;
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    wow: "FOO";
    a: "FOO";
    b: "FOO";
    c: "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {
    cond1: "FOO";
  };
  eventsCausingDelays: {};
  matchesStates: "a" | "b";
  tags: never;
}
"
`;

exports[`getTypegenOutput entry-action-on-ancestor-of-targeted-descendant 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "sayHello";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    sayHello: "GO_STRING";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b" | "b.c" | { b?: "c" };
  tags: never;
}
"
`;

exports[`getTypegenOutput entry-action-on-initial-state-of-targeted-ancestor 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "sayHello";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    sayHello: "GO_STRING";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b" | "b.c" | { b?: "c" };
  tags: never;
}
"
`;

exports[`getTypegenOutput entry-action-on-state-between-lca-and-target 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "rootEntry" | "sayHello";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    rootEntry: "xstate.init";
    sayHello: "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b" | "b.b1" | { b?: "b1" };
  tags: never;
}
"
`;

exports[`getTypegenOutput entry-action-root-external-transition 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "rootEntry";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    rootEntry: "FOO" | "xstate.init";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b";
  tags: never;
}
"
`;

exports[`getTypegenOutput entry-actions-basic 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "someAction" | "otherAction";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    someAction: "FOO";
    otherAction: "BAR";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b" | "c";
  tags: never;
}
"
`;

exports[`getTypegenOutput entry-actions-within-targeted-parallel 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "sayHello" | "sayBazinga";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    sayHello: "GO_STRING";
    sayBazinga: "GO_STRING";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b" | "b.c" | "b.d" | { b?: "c" | "d" };
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-external-transition-out-of-source 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "doSomethingWithFoo";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    doSomethingWithFoo: "xstate.stop" | "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b";
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-external-transition-within-source 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "exitA";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    exitA: "xstate.stop";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "a.c" | "a.d" | { a?: "c" | "d" };
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-internal-transition 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "exitA";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    exitA: "xstate.stop";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "a.c" | "a.d" | { a?: "c" | "d" };
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-on-ancestor-with-external-transition-on-descendant 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "doSomethingWithFoo";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    doSomethingWithFoo: "xstate.stop" | "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "a.a1" | "b" | { a?: "a1" };
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-on-state-between-lca-and-source-state 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "rootExit" | "sayHello";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    rootExit: "xstate.stop";
    sayHello: "xstate.stop" | "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "a.a1" | "b" | { a?: "a1" };
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-root-external-transition 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "rootExit";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    rootExit: "xstate.stop" | "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b";
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-within-ancestor-with-external-transition-outside-of-source 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "myAction";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    myAction: "FOO" | "xstate.stop";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "a.b" | "c" | { a?: "b" };
  tags: never;
}
"
`;

exports[`getTypegenOutput exit-action-within-ancestor-with-internal-transition 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.stop": { type: "xstate.stop" };
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "exitA1" | "exitA2";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    exitA1: "FOO" | "xstate.stop";
    exitA2: "xstate.stop";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "a.a1" | "a.a2" | { a?: "a1" | "a2" };
  tags: never;
}
"
`;

exports[`getTypegenOutput guard-provided-function 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {};
  missingImplementations: {
    actions: "sayHello";
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {
    sayHello: "FOO";
  };
  eventsCausingServices: {};
  eventsCausingGuards: {
    guard: "FOO";
  };
  eventsCausingDelays: {};
  matchesStates: undefined;
  tags: never;
}
"
`;

exports[`getTypegenOutput invoke-within-targeted-parallel 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {
    jump: "done.invoke.(machine).b.c:invocation[0]";
  };
  missingImplementations: {
    actions: never;
    services: "jump";
    guards: never;
    delays: never;
  };
  eventsCausingActions: {};
  eventsCausingServices: {
    jump: "GO_STRING";
  };
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: "a" | "b" | "b.c" | { b?: "c" };
  tags: never;
}
"
`;

exports[`getTypegenOutput service-provided-function 1`] = `
"// This file was automatically generated. Edits will be overwritten

export interface Typegen0 {
  "@@xstate/typegen": true;
  internalEvents: {
    "xstate.init": { type: "xstate.init" };
  };
  invokeSrcNameMap: {
    service1: "done.invoke.(machine):invocation[0]";
    service2: "done.invoke.(machine):invocation[1]";
  };
  missingImplementations: {
    actions: never;
    services: never;
    guards: never;
    delays: never;
  };
  eventsCausingActions: {};
  eventsCausingServices: {
    service1: "xstate.init";
    service2: "xstate.init";
  };
  eventsCausingGuards: {};
  eventsCausingDelays: {};
  matchesStates: undefined;
  tags: never;
}
"
`;
